--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
             </li>
           </ul>
         </div>
-        　　　　　
       </nav>
     </header>
     <!--メインコンテンツ-->
@@ -109,7 +108,7 @@
           <div class="mv_img">
             <img src="images/main.png" alt="">
           </div>
-          <p class="mv_txt">ヒグチサヤカのポートフォリオサイトです。</p>
+          <!-- <p class="mv_txt">ヒグチサヤカのポートフォリオサイトです。</p> -->
           <img src="/images/hitotume_mv.png" class="hitotume_mv" alt="">
           <div class="distorted-circle1 distorted-circle1_bottom"></div>
           <div class="distorted-circle2 distorted-circle2_bottom"></div>
