newt表示させたい！

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     新しいポートフォリオを作成中...
+    <iframe src="https://app.newt.so/otenkiame/apps/blog/models/article/contents/66f8faecacd5a6f4c82944a6/preview"></iframe>
 </body>
 </html>
