js使ってnewtの内容表示させたい！

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="script.js">
+    <script src="script.js"></script>
 </head>
 <body>
     新しいポートフォリオを作成中...
     <iframe src="https://app.newt.so/otenkiame/apps/blog/models/article/contents/66f8faecacd5a6f4c82944a6/preview"></iframe>
+    <h1>Newt CMS Content Integration with Vercel</h1>
+    <!-- コンテンツを表示するための要素 -->
+    <div id="content"></div>
+  
+    <!-- 外部JavaScriptファイルを読み込み -->
 </body>
 </html>
